variables.RunFour.scala.error
Erreur de compilation :
RunFour:6: error: unclosed comment
/*
^RunFour:6: error: unclosed comment
/*
^RunFour:6: error: unclosed comment
/*
^RunFour:6: error: unclosed comment
/*
^RunFour:2: error: Missing closing brace `}' assumed here
var dejaFait: Int=0;
^RunFour:2: error: Missing closing brace `}' assumed here
var dejaFait: Int=0;
^RunFour:2: error: expected class or object definition
var dejaFait: Int=0;
^RunFour:3: error: expected class or object definition
var nbBiscuit: Int=0;
^RunFour:6: error: unclosed comment
/*
^