variables.RunFour.scala.code

var dejaFait: Int=0;
var nbBiscuit: Int=0;


/*
while( dejaFait!=1){
  
  while(nbBiscuit != 4){
    
    if (estSurBiscuit()){
      nbBiscuit= nbBiscuit + 1;
    }
    
  }
  
  
  
/* 
  
  
  
  
  
  
  
  
  
}

while(nbBiscuit!=4){
  if (estSurBiscuit()){
    nbBiscuit= nbBiscuit+1;
  }
 	avance();
  
}